Cleaning the code

--- a/page.html
+++ b/page.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<meta charset="UTF-8"/>
-	<link rel="stylesheet" href="style.css">
-	<title>Clock</title>
-</head>
+	<head>
+		<meta charset="UTF-8"/>
+		<link rel="stylesheet" href="style.css">
+		<title>JSClock</title>
+	</head>
 
-	<canvas id="canvas" width=800px height=600px></canvas>
+	<body>
+		<canvas id="canvas" width=800px height=600px></canvas>
+	</body>
 
 </html>
 
